--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<!-- TODO: figure out why favicon is not working -->
-		<link rel="icon" href="/src/static/favicon.png" />
+		<link rel="icon" href="/src/public/static/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
