import images; testing

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<!-- TODO: #1 figure out why favicon not showing -->
 		<link rel="icon" href="/src/public/static/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
