init footer + content pages + favicon not working

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<!-- TODO: #1 figure out why favicon not showing -->
-		<link rel="icon" href="/src/public/static/favicon.png" />
+		<link rel="icon" type="image/png" href="./public/static/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
